<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:flipInterval="500" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/tvTestName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/test_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvMigraines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/migraines_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTestName" />

                <Spinner
                    android:id="@+id/sMigraines"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMigraines"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/tvMigraines"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/age_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMigraines" />

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvAge"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/tvAge"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/sex_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAge" />

                <Spinner
                    android:id="@+id/sSex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvSex"
                    app:layout_constraintLeft_toRightOf="@+id/tvSex"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvDrugs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/drugs_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSex" />

                <Spinner
                    android:id="@+id/sDrugs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvDrugs"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/tvDrugs"
                    app:layout_constraintRight_toRightOf="parent" />

                <Button
                    android:id="@+id/btSaveAnsvers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/save_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDrugs" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvResultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/result_text"
                    android:textSize="25sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvResultValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="50sp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvResultText" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/back_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvResultValue" />
            </android.support.constraint.ConstraintLayout>
        </ViewFlipper>
    </LinearLayout>


</layout>